stle binding 8 gavetili

--- a/my-dream-app/src/app/test/test.component.html
+++ b/my-dream-app/src/app/test/test.component.html
@@ -1,1 +1,4 @@
-<p>test works!</p>
+<h2 [style.color]="hisError?'green':'red'">სტილი1</h2>
+
+<h2 [style.color]="highlightColor"> სტილი2</h2>
+<h2 [ngStyle]="titleStyle"> სტილი3</h2>
