--- a/my-dream-app/src/app/test/test.component.html
+++ b/my-dream-app/src/app/test/test.component.html
@@ -1,4 +1,36 @@
-<h2 [style.color]="hisError?'green':'red'">სტილი1</h2>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+        <h2 [style.color]="hisError?'green':'red'">Hello {{name}}</h2>
 
-<h2 [style.color]="highlightColor"> სტილი2</h2>
-<h2 [ngStyle]="titleStyle"> სტილი3</h2>
+        <h2 [style.color]="highlightColor"> სტილი2</h2>
+        <h2 [ngStyle]="titleStyle"> სტილი3</h2>
+        
+        <hr class="green">
+        
+        <button (click)="onClick($event)" > click my</button>
+        {{greeting}}
+        <br>
+        <button (click)="NAme='გამარჯობა'">greet</button>
+        {{NAme}}
+        <hr class="green">
+        <input [(ngModel)]="NAME" type="text">
+        <hr>
+        <p>{{NAME}}</p>
+        <hr>
+        
+        
+        <h1 *ngIf="disname; else elseBlock " class ="green"> if = true </h1>
+        <ng-template #elseBlock>
+                <h1  class="green">  if = false </h1>
+        </ng-template>
+       
+
+</body>
+</html>
+
