--- a/Exercise/src/app/app.component.html
+++ b/Exercise/src/app/app.component.html
@@ -1,1 +1,9 @@
-<app-test></app-test>
+<!-- <app-test></app-test>  -->
+<!-- 
+<div style="justify-content: center;">
+    <h1>    
+         Welcome to {{title}}!
+    </h1>
+
+</div>-->
+<app-user-list></app-user-list> 
