--- a/Exercise/src/app/user-list/user-list.component.html
+++ b/Exercise/src/app/user-list/user-list.component.html
@@ -1,12 +1,15 @@
 <h2>uesrs list</h2>
 <ul *ngFor="let user of uesrs">
 
-  <div>
-    <p>id :  {{user.id}}</p> <br>
-    <p>სახელი :  {{user.name}} </p> <br>
-    <p>ასაკი :  {{user.age}}</p> 
+  <div class="conteiner">
+    <div class="row">
+    <p>{{user.id}} </p> <br>
+    <p>{{user.name}} </p> <br>
+    <p>{{user.age}}</p>> 
     <hr>
+   </div>
    </div>
 
     
 </ul>
+
