--- a/Exercise/src/app/app.component.html
+++ b/Exercise/src/app/app.component.html
@@ -6,4 +6,5 @@
     </h1>
 
 </div>-->
-<app-user-list></app-user-list> 
+<!-- <app-user-list></app-user-list>  -->
+<app-registration></app-registration>
